# 5ire_clone

./: package-lock.json  package.json
.erb/configs/: webpack.config.renderer.dev.ts
release/app/: package.json
src-tauri/: Cargo.toml  tauri.conf.json
